Create entities from models and insert them in DB

--- a/src/main/resources/config/config.properties
+++ b/src/main/resources/config/config.properties
@@ -1,9 +1,11 @@
 userName = sftpuser
 remoteHost = 136ea.k.time4vps.cloud
-password = ENC(ZEHlGhzz/ENKS3RhbS9Ic9uqJNln2r09)
+passwordForServer = ENC(ZEHlGhzz/ENKS3RhbS9Ic9uqJNln2r09)
 
 remoteDir = /sftpuser/xml-data
 localDir = D:\\internship\\hyperpollar\\src\\main\\resources\\downloads
 
 schemaPath = D:\\internship\\hyperpollar\\src\\main\\resources\\xsd\\schema.xsd
 
+user = root
+password = 1234
