Add Get method, Id to entities, update properties and implement singleton

--- a/src/main/resources/config/config.properties
+++ b/src/main/resources/config/config.properties
@@ -1,11 +1,14 @@
-userName = sftpuser
+sftp.user = sftpuser
 remoteHost = 136ea.k.time4vps.cloud
-passwordForServer = ENC(ZEHlGhzz/ENKS3RhbS9Ic9uqJNln2r09)
+sftp.password = ENC(ZEHlGhzz/ENKS3RhbS9Ic9uqJNln2r09)
 
 remoteDir = /sftpuser/xml-data
 localDir = D:\\internship\\hyperpollar\\src\\main\\resources\\downloads
 
 schemaPath = D:\\internship\\hyperpollar\\src\\main\\resources\\xsd\\schema.xsd
 
-user = root
-password = 1234
+db.user = root
+db.password = 1234
+
+database.driver = mysql
+database.server = localhost:3306
