Code improvement and encrypting password.

--- a/src/main/resources/config/config.properties
+++ b/src/main/resources/config/config.properties
@@ -8,7 +8,7 @@ localDir = D:\\internship\\hyperpollar\\src\\main\\resources\\downloads
 schemaPath = D:\\internship\\hyperpollar\\src\\main\\resources\\xsd\\schema.xsd
 
 db.user = root
-db.password = 1234
+db.password = ENC(B/Zhq+dviCiDmPaMxUAqNw==)
 
 database.driver = mysql
 database.server = localhost:3306
